<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CompletePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SecondScreen"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="-3dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/purple2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/Welcomeid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:foregroundGravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/purple"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="32dp"
            android:text="Codechef"
            android:textAlignment="viewEnd"

            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            app:srcCompat="@drawable/codechef" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/AppD"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/purple"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="99dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/android" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="50dp"
            android:text="@string/appd"
            android:textAlignment="viewEnd"

            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlCompat" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Github"
        android:layout_width="227dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/purple"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        app:layout_constraintVertical_bias="0.043">

        <TextView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/github"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLight"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946" />

    <Button
        android:id="@+id/btnDark"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/Dark"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="184dp"
        android:backgroundTint="@color/purple"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="92dp"
            android:layout_height="91dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/webd" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="50dp"
            android:text="@string/webd"
            android:textAlignment="viewEnd"

            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlCompat" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="184dp"
        android:backgroundTint="@color/purple"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="88dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/machine_learning"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="77dp"
            android:layout_height="81dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/machine_learning" />
    </androidx.cardview.widget.CardView>

    <!--WEB VIEW BUTTON-->
</androidx.constraintlayout.widget.ConstraintLayout>